# monty

./: .codecov.yml  .gitignore  CLAUDE.md  Cargo.toml  Makefile
.claude/: settings.json
.github/workflows/: ci.yml  codspeed.yml
crates/monty/: Cargo.toml
crates/monty-bench/: Cargo.toml  build.rs
crates/monty-bench/benches/: main.rs
crates/monty-datatest/: Cargo.toml  build.rs
crates/monty-datatest/src/: main.rs
crates/monty-js/: package-lock.json  package.json  wrapper.ts
crates/monty-js/__test__/: mount.spec.ts
crates/monty-js/src/: convert.rs  lib.rs  monty_cls.rs  mount.rs
crates/monty-python/python/pydantic_monty/: __init__.py  _monty.pyi
crates/monty-python/src/: async_dispatch.rs  build.rs  convert.rs  dataclass.rs  external.rs  lib.rs  limits.rs  monty_cls.rs  mount.rs  print_target.rs  repl.rs  serialization.rs
crates/monty-python/tests/: test_async.py  test_exceptions.py  test_external.py  test_inputs.py  test_mount_table.py  test_print.py  test_repl.py  test_start.py  test_type_check.py  test_types.py
crates/monty-type-checking/: Cargo.toml
crates/monty-type-checking/benches/: type_check.rs
crates/monty-type-checking/src/: db.rs  lib.rs  pool.rs  type_check.rs
crates/monty-type-checking/tests/: good_types.py  main.rs
crates/monty-typeshed/: build.rs
crates/monty/src/: args.rs  asyncio.rs  exception_private.rs  exception_public.rs  expressions.rs  fstring.rs  function.rs  hash.rs  heap.rs  heap_data.rs  heap_traits.rs  intern.rs  io.rs  lib.rs  object.rs  parse.rs  prepare.rs  repl.rs  resource.rs  run.rs  run_progress.rs  session.rs  signature.rs  sorting.rs  value.rs
crates/monty/src/builtins/: abs.rs  all.rs  any.rs  bin.rs  chr.rs  divmod.rs  enumerate.rs  filter.rs  getattr.rs  hasattr.rs  hash.rs  hex.rs  id.rs  isinstance.rs  len.rs  map.rs  min_max.rs  mod.rs  next.rs  oct.rs  ord.rs  pow.rs  print.rs  repr.rs  reversed.rs  round.rs  setattr.rs  sorted.rs  sum.rs  type_.rs  zip.rs
crates/monty/src/bytecode/: compiler.rs  op.rs
crates/monty/src/bytecode/vm/: async_exec.rs  attr.rs  binary.rs  call.rs  collections.rs  compare.rs  exceptions.rs  format.rs  mod.rs  scheduler.rs
crates/monty/src/fs/: common.rs  mount_table.rs  overlay.rs
crates/monty/src/heap/: heap_entries.rs
crates/monty/src/modules/: asyncio.rs  datetime.rs  gc.rs  math.rs  mod.rs  os.rs  pathlib.rs  re.rs  sys.rs  typing.rs
crates/monty/src/modules/json/: dump.rs  load.rs  mod.rs  string_cache.rs
crates/monty/src/types/: bytes.rs  dataclass.rs  date.rs  datetime.rs  dict.rs  dict_view.rs  iter.rs  list.rs  long_int.rs  module.rs  namedtuple.rs  path.rs  py_trait.rs  range.rs  re_match.rs  re_pattern.rs  set.rs  slice.rs  str.rs  timedelta.rs  timezone.rs  tuple.rs  type.rs
crates/monty/test_cases/: async__asyncio_run.py  async__ext_call.py  async__gather_all.py  builtin__hasattr.py  builtin__map.py  builtin__more_iter_funcs.py  builtin__repr.py  dataclass__basic.py  dataclass__frozen_augmented_assign_error.py  datetime__core.py  hash__ops.py  int__max_str_digits.py  json__dumps_formatting.py  json__dumps_keys.py  json__module.py  list__ops.py  mount_fs__errors.py  mount_fs__ops.py  refcount__cycle_external_ref.py  tuple__ops.py
crates/monty/tests/: asyncio.rs  datatest_runner.rs  fs.rs  heap_reader_compile_fail.rs  inputs.rs  name_lookup.rs  parse_errors.rs  parse_large_literals.rs  print_writer.rs  repl.rs  resource_limits.rs  session.rs
crates/monty/tests/heap_reader_compile_fail_cases/: cases.rs  smuggle_and_swap_reader.stderr  smuggle_heap_read.stderr  smuggle_vm.stderr
scripts/: bench_json.py  bench_type_checking.py
