[package]
name = "monty_type_checking"
readme = "../../README.md"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "monty_type_checking"
path = "src/lib.rs"

[dependencies]
monty_typeshed = { path = "../monty-typeshed" }
ruff_python_ast = { workspace = true }
ruff_db = { workspace = true }
ruff_text_size = { workspace = true }
ty_python_semantic = { workspace = true }
ty_module_resolver = { workspace = true }
salsa = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
# Use codspeed-criterion-compat for CI benchmarks, real criterion for local flamegraphs
codspeed-criterion-compat = "4.2.1"
criterion = "0.5"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[[bench]]
name = "type_check"
harness = false

[lints]
workspace = true
