[package]
name = "monty"
readme = "../../README.md"
version = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "monty"
path = "src/lib.rs"

[dependencies]
ruff_python_parser = { workspace = true }
ruff_python_stdlib = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_text_size = { workspace = true }
ahash = { version = "0.8.0", features = ["serde"] }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
hashbrown = "0.16"
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
smallvec = { version = "1.13", features = ["serde"] }
fancy-regex = "0.17.0"
libm = "0.2"
chrono = { version = "0.4", features = ["serde"] }
speedate = "0.17.0"
itertools = "0.14.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
jiter = { version = "0.13.0", features = ["num-bigint"] }

[features]
# ref-count-return changes behavior to return information on reference counts to check they're correct
# should be used for testing only
ref-count-return = ["test-hooks"]
# memory-model-checks enables a Drop implementation on Value which catches heap allocated values that are dropped
# without being dereferenced, and sets the default GC interval to 1 so garbage collection runs on every
# GC-tracked allocation.
# should be used for testing only
memory-model-checks = []
# test-hooks exposes small internal helpers needed by integration tests that
# exercise production behavior without duplicating implementation details.
test-hooks = []

[dev-dependencies]
tempfile = "3"
insta = { workspace = true }

[lints]
workspace = true
